--- a/Source/ModuleData.ui
+++ b/Source/ModuleData.ui
@@ -30,6 +30,13 @@
     <property name="bottomMargin">
      <number>0</number>
     </property>
+    <item>
+     <widget class="QTabWidget" name="tabWidget">
+      <property name="currentIndex">
+       <number>-1</number>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -53,7 +60,7 @@
     </property>
     <addaction name="actionMarking"/>
     <addaction name="separator"/>
-    <addaction name="actionNew"/>
+    <addaction name="actionChartNew"/>
    </widget>
    <widget class="QMenu" name="menuWindows">
     <property name="title">
@@ -119,7 +126,7 @@
     <string>View</string>
    </property>
   </action>
-  <action name="actionNew">
+  <action name="actionChartNew">
    <property name="text">
     <string>New</string>
    </property>
