--- a/Source/ModuleData.ui
+++ b/Source/ModuleData.ui
@@ -62,6 +62,10 @@
     <addaction name="separator"/>
     <addaction name="actionChartNew"/>
     <addaction name="actionChartClose"/>
+    <addaction name="separator"/>
+    <addaction name="actionChartPlay"/>
+    <addaction name="actionChartPause"/>
+    <addaction name="actionChartStop"/>
    </widget>
    <widget class="QMenu" name="menuWindows">
     <property name="title">
@@ -140,6 +144,21 @@
   <action name="actionChartClose">
    <property name="text">
     <string>Close</string>
+   </property>
+  </action>
+  <action name="actionChartPlay">
+   <property name="text">
+    <string>Play</string>
+   </property>
+  </action>
+  <action name="actionChartPause">
+   <property name="text">
+    <string>Pause</string>
+   </property>
+  </action>
+  <action name="actionChartStop">
+   <property name="text">
+    <string>Stop</string>
    </property>
   </action>
  </widget>
