Кнопки быстрого доступа

--- a/Source/ModuleData.ui
+++ b/Source/ModuleData.ui
@@ -45,7 +45,7 @@
      <x>0</x>
      <y>0</y>
      <width>1058</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -66,6 +66,8 @@
     <addaction name="actionChartPlay"/>
     <addaction name="actionChartPause"/>
     <addaction name="actionChartStop"/>
+    <addaction name="separator"/>
+    <addaction name="actionChartData"/>
    </widget>
    <widget class="QMenu" name="menuWindows">
     <property name="title">
@@ -179,6 +181,15 @@
   <action name="actionDataSelect">
    <property name="text">
     <string>Select</string>
+   </property>
+  </action>
+  <action name="actionChartData">
+   <property name="icon">
+    <iconset resource="ModuleData.qrc">
+     <normaloff>:/Icons/Icons/db.png</normaloff>:/Icons/Icons/db.png</iconset>
+   </property>
+   <property name="text">
+    <string>Data...</string>
    </property>
   </action>
  </widget>
